Adicionado texto no body

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Teste </title>
 </head>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum blanditiis dolore delectus expedita facere, dolorem provident, reprehenderit quod labore laborum quia veritatis debitis consequuntur! Amet officiis ut quia dolor quam!</p>
 <body>
     
 </body>
